--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
         "start": "node dist/index.js",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+        "build": "tsc"
     },
     "author": "",
     "license": "ISC",
