--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "@types/cors": "^2.8.12",
         "@types/dompurify": "^2.3.3",
         "@types/jsdom": "^20.0.0",
         "@types/jsonwebtoken": "^8.5.8",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "cors": "^2.8.5",
         "dompurify": "^2.3.10",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
