--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/jsonwebtoken": "^8.5.8",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "cloudinary": "^1.31.0",
         "cors": "^2.8.5",
         "dompurify": "^2.3.10",
         "dotenv": "^16.0.1",
