--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-        "start": "node dist/index.js",
+        "dev": "nodemon src/index.ts",
+        "start": "npx ts-node dist/index.js",
         "build": "tsc"
     },
     "author": "",
@@ -16,6 +16,7 @@
         "@types/node": "^18.7.6",
         "concurrently": "^7.3.0",
         "nodemon": "^2.0.19",
+        "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
     },
     "dependencies": {
