--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-    "name": "social-media-backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon src/index.ts",
-        "start": "npx ts-node dist/index.js",
-        "build": "tsc"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/express": "^4.17.13",
-        "@types/node": "^18.7.6",
-        "concurrently": "^7.3.0",
-        "nodemon": "^2.0.19",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.7.4"
-    },
-    "dependencies": {
-        "@types/cors": "^2.8.12",
-        "@types/dompurify": "^2.3.3",
-        "@types/jsdom": "^20.0.0",
-        "@types/jsonwebtoken": "^8.5.8",
-        "bcrypt": "^5.0.1",
-        "body-parser": "^1.20.0",
-        "cloudinary": "^1.31.0",
-        "cors": "^2.8.5",
-        "dompurify": "^2.3.10",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "jsdom": "^20.0.0",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.5.2"
-    }
+  "name": "social-media-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon src/index.ts",
+    "start": "npx ts-node dist/index.js",
+    "build": "tsc"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.6",
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
+    "prettier": "^2.8.8"
+  },
+  "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/dompurify": "^2.3.3",
+    "@types/jsdom": "^20.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cloudinary": "^1.31.0",
+    "cors": "^2.8.5",
+    "dompurify": "^2.3.10",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsdom": "^20.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2"
+  }
 }
